--- a/home/.env
+++ b/home/.env
@@ -1,2 +1,2 @@
 # Replace this URL with the URL of your blog app
-BLOG_URL="https://with-zones-blog.vercel.app"
+APP_URL="https://nextetor.vercel.app"
