--- a/package.json
+++ b/package.json
@@ -1,4 +1,29 @@
 {
+  "name": "nextzone",
+  "version": "0.1.0",
   "private": true,
-  "license": "MIT"
+  "scripts": {
+    "clean": "rimraf .next/ out/",
+    "-------------------------------- DEV ----": "----",
+    "dev": "MODE=development node bin/dev",
+    "-------------------------------- PROD ----": "----",
+    "build": "MODE=production node bin/build",
+    "start": "MODE=production node bin/start",
+    "-------------------------------- STAGING ----": "----",
+    "build:staging": "MODE=staging node bin/build",
+    "start:staging": "MODE=staging node bin/start",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "next": "11.0.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
+  },
+  "devDependencies": {
+    "@types/react": "17.0.14",
+    "eslint": "7.31.0",
+    "eslint-config-next": "11.0.1",
+    "rimraf": "^3.0.2",
+    "typescript": "4.3.5"
+  }
 }
